deployment/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hugo-www-service
  namespace: cloud-computing
  labels:
    app: hugo-www-app
    namespace: cloud-computing
spec:
  selector:
    app: hugo-www-app
    namespace: cloud-computing
  ports:
    - protocol: TCP
      port: 80
