deployment/kubernetes/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hugo-www-ingress
  namespace: cloud-computing
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`hugo.lukasljl.de`)
    kind: Rule
    services:
        - name: hugo-www-service
          namespace: cloud-computing
          port: 80
  tls:
    certResolver: myresolver
